--- a/w3/app/src/main/res/layout/constraint_layout.xml
+++ b/w3/app/src/main/res/layout/constraint_layout.xml
@@ -9,12 +9,12 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="140dp"
+        android:layout_marginTop="132dp"
         android:text="Thông tin"
         android:textSize="24sp"
         app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="147dp"
-        tools:ignore="MissingConstraints" />
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="147dp" />
 
     <EditText
         android:id="@+id/editTextPhone"
